# wetter_prediction

./: .gitignore  README.md  pyproject.toml
data/models/: rain_engine.joblib
docs/superpowers/plans/: 2026-06-29-wetter-postprocessing-lueneburg.md
docs/superpowers/specs/: 2026-06-29-wetter-postprocessing-lueneburg-design.md
src/wetter/: cli.py  config.py  split.py
src/wetter/data/: build_dataset.py  build_inputs.py  climatology.py  features.py  forecasts.py  io.py  live.py  observations.py  rain_dataset.py  single_runs.py
src/wetter/eval/: calibration.py  metrics.py  rain_metrics.py  rain_report.py  report.py
src/wetter/models/: baselines.py  bias_correction.py  blend_gbm.py  conformal.py  emos.py  engine.py  rain.py
src/wetter/web/: app.py  cache.py  service.py
src/wetter/web/static/: app.js  index.html  styles.css
tests/: test_cli.py  test_config.py  test_split.py
tests/data/: test_build_dataset.py  test_climatology.py  test_features.py  test_forecasts.py  test_io.py  test_live.py  test_observations.py  test_rain_dataset.py  test_single_runs.py
tests/eval/: test_calibration.py  test_metrics.py  test_rain_metrics.py  test_rain_report.py  test_report.py
tests/models/: test_baselines.py  test_bias_correction.py  test_blend_gbm.py  test_conformal.py  test_emos.py  test_engine.py  test_rain.py
tests/web/: test_app.py  test_cache.py  test_service.py
