[project]
name = "wetter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27", "polars>=1.0", "duckdb>=1.0", "pyarrow>=16",
    "numpy>=2.0", "scipy>=1.13", "lightgbm>=4.3", "scikit-learn>=1.5",
    "matplotlib>=3.9", "typer>=0.12", "tzdata>=2024.1", "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "tabulate>=0.9"]

[project.scripts]
wetter = "wetter.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
